[package]
name = "ciphers"
version = "0.1.0"
description = "Cipher implementation library."
keywords = ["cipher", "ciphers", "cryptography"]
repository = "https://github.com/sradley/ciphers"
documentation = "https://docs.rs/ciphers"
authors = ["sradley <stephen.t.radley@protonmail.com>"]
readme = "README.md"
license = "MIT"
categories = ["cryptography"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
